Bug 692573 - Missing Glyphs when generating PDF
Summary: Missing Glyphs when generating PDF
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 9.04
Hardware: PC All
: P2 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-07 07:57 UTC by artifex
Modified: 2011-11-09 18:20 UTC (History)
0 users

See Also:
Customer: 870
Word Size: ---


Attachments
MissingGlyphs.pdf (219.30 KB, application/pdf)
2011-10-07 07:57 UTC, artifex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description artifex 2011-10-07 07:57:54 UTC
Created attachment 7972 [details]
MissingGlyphs.pdf

The attached file MissingGlyphs.pdf contains a table of messages in several languages. If this file is converted to PDF, the glyphs of the lines with the country codes JA, ZH and AR are missing.
If the same file is converted to TIFF/G4 or Postscript, everything is OK!
Comment 1 Ken Sharp 2011-10-07 08:00:50 UTC
This should clearly be a PDF writer problem, not a PDF interpreter problem.
Comment 2 Ken Sharp 2011-10-21 09:56:35 UTC
Fixed in Git commit:

312255297353a9f62b5090e9137586a8ecfc8601

Unfortunately, now that I can see the text, its clear that the Arabic text is
not correctly spaced after conversion via pdfwrite. It looks like many of the
glyphs have a width of 0.

I'll open that as a new bug, and close this one, since the text is no longer
missing.
Comment 3 Ken Sharp 2011-10-21 10:00:50 UTC
New bug #692621 opened for the spacing problem.
Comment 4 Ken Sharp 2011-10-24 15:54:04 UTC
Bug #692621 is now resolved, for complete success two Commits are required:

312255297353a9f62b5090e9137586a8ecfc8601

and 

b5fa52b7e60a7eb23b77c4fd117ed37eb04263b5